Trabajando en las estatísticas de flagstats

--- a/code/notebooks/annotations.ipynb
+++ b/code/notebooks/annotations.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1117,25 +1117,465 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **Number of Seqs before and after fastp**"
+    "## **Number of Seqs before and after fastp**\n",
+    "\n",
+    "* In order to run the next code, you have to have all fastq files (**all chromosomes, reads**) in *raw* and *processed*"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 97,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CompletedProcess(args=['bash', 'fastp_analysis.sh'], returncode=0)"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "subprocess.run([\"bash\", \"fastp_analysis.sh\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>nseqs_before_fastp_1</th>\n",
+       "      <th>nseqs_after_fastp_1</th>\n",
+       "      <th>nseqs_before_fastp_2</th>\n",
+       "      <th>nseqs_after_fastp_2</th>\n",
+       "      <th>sample</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>12782098</td>\n",
+       "      <td>7326944</td>\n",
+       "      <td>13710428</td>\n",
+       "      <td>7805056</td>\n",
+       "      <td>ERR696683</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>13599176</td>\n",
+       "      <td>11157220</td>\n",
+       "      <td>14455979</td>\n",
+       "      <td>11949382</td>\n",
+       "      <td>ERR753368</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>14418846</td>\n",
+       "      <td>11807880</td>\n",
+       "      <td>15425862</td>\n",
+       "      <td>12735619</td>\n",
+       "      <td>ERR753369</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>19137007</td>\n",
+       "      <td>19062314</td>\n",
+       "      <td>19599533</td>\n",
+       "      <td>19503957</td>\n",
+       "      <td>ERR753370</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>14433503</td>\n",
+       "      <td>7201499</td>\n",
+       "      <td>12561966</td>\n",
+       "      <td>5931469</td>\n",
+       "      <td>ERR753371</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>14631641</td>\n",
+       "      <td>11966864</td>\n",
+       "      <td>15577190</td>\n",
+       "      <td>12843549</td>\n",
+       "      <td>ERR753372</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>13156883</td>\n",
+       "      <td>12736478</td>\n",
+       "      <td>13659821</td>\n",
+       "      <td>13173367</td>\n",
+       "      <td>ERR753373</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8358030</td>\n",
+       "      <td>8054428</td>\n",
+       "      <td>8337180</td>\n",
+       "      <td>8001535</td>\n",
+       "      <td>ERR753374</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>7548397</td>\n",
+       "      <td>4585721</td>\n",
+       "      <td>7793064</td>\n",
+       "      <td>4706718</td>\n",
+       "      <td>ERR753375</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>10409144</td>\n",
+       "      <td>5947899</td>\n",
+       "      <td>11104110</td>\n",
+       "      <td>6292675</td>\n",
+       "      <td>ERR753376</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>10743472</td>\n",
+       "      <td>6282748</td>\n",
+       "      <td>11570467</td>\n",
+       "      <td>6734655</td>\n",
+       "      <td>ERR753377</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>12435276</td>\n",
+       "      <td>10207964</td>\n",
+       "      <td>13382961</td>\n",
+       "      <td>11073258</td>\n",
+       "      <td>ERR753378</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    nseqs_before_fastp_1  nseqs_after_fastp_1  nseqs_before_fastp_2  \\\n",
+       "0               12782098              7326944              13710428   \n",
+       "1               13599176             11157220              14455979   \n",
+       "2               14418846             11807880              15425862   \n",
+       "3               19137007             19062314              19599533   \n",
+       "4               14433503              7201499              12561966   \n",
+       "5               14631641             11966864              15577190   \n",
+       "6               13156883             12736478              13659821   \n",
+       "7                8358030              8054428               8337180   \n",
+       "8                7548397              4585721               7793064   \n",
+       "9               10409144              5947899              11104110   \n",
+       "10              10743472              6282748              11570467   \n",
+       "11              12435276             10207964              13382961   \n",
+       "\n",
+       "    nseqs_after_fastp_2     sample  \n",
+       "0               7805056  ERR696683  \n",
+       "1              11949382  ERR753368  \n",
+       "2              12735619  ERR753369  \n",
+       "3              19503957  ERR753370  \n",
+       "4               5931469  ERR753371  \n",
+       "5              12843549  ERR753372  \n",
+       "6              13173367  ERR753373  \n",
+       "7               8001535  ERR753374  \n",
+       "8               4706718  ERR753375  \n",
+       "9               6292675  ERR753376  \n",
+       "10              6734655  ERR753377  \n",
+       "11             11073258  ERR753378  "
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_fastp = pd.read_csv(\"fastp_analysis.tsv\", sep=\"\\t\")\n",
+    "df_fastp"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Mapped reads, with the reference Genome\n",
+    "\n",
+    "* ### flagstats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CompletedProcess(args=['bash', 'flagstats.sh'], returncode=0)"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "subprocess.run([\"bash\", \"flagstats.sh\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.read_csv(\"fastp_analysis.tsv\", sep=\"\\t\")"
+    "flastats = pd.read_csv(\"flastats.tsv\", sep=\"\\t\")\n",
+    "flastats[\"mapped_reads_per\"] = np.array(flastats.mapped_reads/flastats.num_seqs_afterQC*100).round(2)\n",
+    "flastats[\"properly_paired_per\"] = np.array(flastats.properly_mapped/flastats.num_seqs_afterQC*100).round(2) \n",
+    "flastats[\"singletons_per\"] = np.array(flastats.singletons/flastats.num_seqs_afterQC*100).round(2)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "flastats.to_csv(\"flastats.tsv\", sep=\"\\t\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>num_seqs_afterQC</th>\n",
+       "      <th>mapped_reads</th>\n",
+       "      <th>properly_mapped</th>\n",
+       "      <th>singletons</th>\n",
+       "      <th>sample</th>\n",
+       "      <th>mapped_reads_per</th>\n",
+       "      <th>properly_paired_per</th>\n",
+       "      <th>singletons_per</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>11412296</td>\n",
+       "      <td>11409623</td>\n",
+       "      <td>11231546</td>\n",
+       "      <td>2627</td>\n",
+       "      <td>ERR696683</td>\n",
+       "      <td>99.98</td>\n",
+       "      <td>98.42</td>\n",
+       "      <td>0.02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>16198288</td>\n",
+       "      <td>16196058</td>\n",
+       "      <td>15993978</td>\n",
+       "      <td>2168</td>\n",
+       "      <td>ERR753368</td>\n",
+       "      <td>99.99</td>\n",
+       "      <td>98.74</td>\n",
+       "      <td>0.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>17277398</td>\n",
+       "      <td>17275307</td>\n",
+       "      <td>17129454</td>\n",
+       "      <td>2035</td>\n",
+       "      <td>ERR753369</td>\n",
+       "      <td>99.99</td>\n",
+       "      <td>99.14</td>\n",
+       "      <td>0.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>26218218</td>\n",
+       "      <td>26212327</td>\n",
+       "      <td>25691172</td>\n",
+       "      <td>5811</td>\n",
+       "      <td>ERR753370</td>\n",
+       "      <td>99.98</td>\n",
+       "      <td>97.99</td>\n",
+       "      <td>0.02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>8699690</td>\n",
+       "      <td>8698945</td>\n",
+       "      <td>8641500</td>\n",
+       "      <td>725</td>\n",
+       "      <td>ERR753371</td>\n",
+       "      <td>99.99</td>\n",
+       "      <td>99.33</td>\n",
+       "      <td>0.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>17248693</td>\n",
+       "      <td>17246266</td>\n",
+       "      <td>17053104</td>\n",
+       "      <td>2369</td>\n",
+       "      <td>ERR753372</td>\n",
+       "      <td>99.99</td>\n",
+       "      <td>98.87</td>\n",
+       "      <td>0.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>15265537</td>\n",
+       "      <td>15264298</td>\n",
+       "      <td>14760716</td>\n",
+       "      <td>1183</td>\n",
+       "      <td>ERR753373</td>\n",
+       "      <td>99.99</td>\n",
+       "      <td>96.69</td>\n",
+       "      <td>0.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8999288</td>\n",
+       "      <td>8998390</td>\n",
+       "      <td>8664044</td>\n",
+       "      <td>870</td>\n",
+       "      <td>ERR753374</td>\n",
+       "      <td>99.99</td>\n",
+       "      <td>96.27</td>\n",
+       "      <td>0.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>7405222</td>\n",
+       "      <td>7404251</td>\n",
+       "      <td>7339372</td>\n",
+       "      <td>947</td>\n",
+       "      <td>ERR753375</td>\n",
+       "      <td>99.99</td>\n",
+       "      <td>99.11</td>\n",
+       "      <td>0.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>9079860</td>\n",
+       "      <td>9078482</td>\n",
+       "      <td>8990840</td>\n",
+       "      <td>1342</td>\n",
+       "      <td>ERR753376</td>\n",
+       "      <td>99.98</td>\n",
+       "      <td>99.02</td>\n",
+       "      <td>0.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>9708805</td>\n",
+       "      <td>9706917</td>\n",
+       "      <td>9599718</td>\n",
+       "      <td>1842</td>\n",
+       "      <td>ERR753377</td>\n",
+       "      <td>99.98</td>\n",
+       "      <td>98.88</td>\n",
+       "      <td>0.02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>14926310</td>\n",
+       "      <td>14924251</td>\n",
+       "      <td>14780184</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>ERR753378</td>\n",
+       "      <td>99.99</td>\n",
+       "      <td>99.02</td>\n",
+       "      <td>0.01</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    num_seqs_afterQC  mapped_reads  properly_mapped  singletons     sample  \\\n",
+       "0           11412296      11409623         11231546        2627  ERR696683   \n",
+       "1           16198288      16196058         15993978        2168  ERR753368   \n",
+       "2           17277398      17275307         17129454        2035  ERR753369   \n",
+       "3           26218218      26212327         25691172        5811  ERR753370   \n",
+       "4            8699690       8698945          8641500         725  ERR753371   \n",
+       "5           17248693      17246266         17053104        2369  ERR753372   \n",
+       "6           15265537      15264298         14760716        1183  ERR753373   \n",
+       "7            8999288       8998390          8664044         870  ERR753374   \n",
+       "8            7405222       7404251          7339372         947  ERR753375   \n",
+       "9            9079860       9078482          8990840        1342  ERR753376   \n",
+       "10           9708805       9706917          9599718        1842  ERR753377   \n",
+       "11          14926310      14924251         14780184        2007  ERR753378   \n",
+       "\n",
+       "    mapped_reads_per  properly_paired_per  singletons_per  \n",
+       "0              99.98                98.42            0.02  \n",
+       "1              99.99                98.74            0.01  \n",
+       "2              99.99                99.14            0.01  \n",
+       "3              99.98                97.99            0.02  \n",
+       "4              99.99                99.33            0.01  \n",
+       "5              99.99                98.87            0.01  \n",
+       "6              99.99                96.69            0.01  \n",
+       "7              99.99                96.27            0.01  \n",
+       "8              99.99                99.11            0.01  \n",
+       "9              99.98                99.02            0.01  \n",
+       "10             99.98                98.88            0.02  \n",
+       "11             99.99                99.02            0.01  "
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "flastats"
    ]
   }
  ],
