Restructuración del dir notebooks, es analysis ahora

--- a/code/analysis/notebooks/annotations.ipynb
+++ b/code/analysis/notebooks/annotations.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -269,13 +269,13 @@
        "11  ftp.sra.ebi.ac.uk/vol1/run/ERR753/ERR753378/C3...      NaN  "
       ]
      },
-     "execution_count": 53,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "report = pd.read_csv(\"../../metadata/report.tsv\", sep=\"\\t\")\n",
+    "report = pd.read_csv(\"../../../metadata/report.tsv\", sep=\"\\t\")\n",
     "report"
    ]
   },
@@ -620,7 +620,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "table3.to_csv(\"../metadata/table3.csv\", index=None)"
+    "table3.to_csv(\"../../../metadata/table3.csv\", index=None)"
    ]
   },
   {
@@ -898,7 +898,7 @@
     }
    ],
    "source": [
-    "table3_csv = pd.read_csv(\"../../metadata/table3.csv\")\n",
+    "table3_csv = pd.read_csv(\"../../../metadata/table3.csv\")\n",
     "table3_csv"
    ]
   },
@@ -955,16 +955,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "CompletedProcess(args=['bash', 'joining_files.sh'], returncode=0)"
+       "CompletedProcess(args=['bash', '../scripts_analysis/02joining_files.sh'], returncode=0)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -973,29 +973,29 @@
     "## heavy computing +25 min -> you need all fastq.gz files in data/raw/\n",
     "\n",
     "for chr in [\"chr3\", \"chr5\", \"chr7\", \"chr12\", \"chr17\"]:\n",
-    "    subprocess.run([\"bash\", \"calculating_length.sh\", chr])\n",
+    "    subprocess.run([\"bash\", \"../scripts_analysis/01calculating_length.sh\", chr])\n",
     "\n",
-    "subprocess.run([\"bash\", \"joining_files.sh\"])\n"
+    "subprocess.run([\"bash\", \"../scripts_analysis/02joining_files.sh\"])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "list_files = os.listdir(\"../../results/annotations/\")\n",
+    "list_files = os.listdir(\"../../../results/annotations/\")\n",
     "\n",
     "list_files_path = []\n",
     "\n",
     "for file in range(len(list_files)):\n",
-    "    path = \"../../results/annotations/\" + list_files[file]\n",
+    "    path = \"../../../results/annotations/\" + list_files[file]\n",
     "    list_files_path.append(path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1030,7 +1030,7 @@
     "    sd_seq_len = np.array([s.strip() for s in len_list]).astype(int).std().round(2)\n",
     "    \n",
     "    print(\"mean value of \", file_path.replace(\n",
-    "        \"../../results/annotations/\", \"\"\n",
+    "        \"../../../results/annotations/\", \"\"\n",
     "        ).replace(\n",
     "            \"_len.txt\", \"\"\n",
     "            ), \" -> \", mean_seq_len, \"+/-\", sd_seq_len)\n",
@@ -1041,16 +1041,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_4425/3359814889.py:7: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+      "/tmp/ipykernel_5160/178359344.py:7: FutureWarning: The default value of regex will change from True to False in a future version.\n",
       "  df_len_seq[\"sample\"] = df_len_seq[\"sample\"].str.replace(\"../../results/annotations/\", \"\")\n",
-      "/tmp/ipykernel_4425/3359814889.py:8: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+      "/tmp/ipykernel_5160/178359344.py:8: FutureWarning: The default value of regex will change from True to False in a future version.\n",
       "  df_len_seq[\"sample\"] = df_len_seq[\"sample\"].str.replace(\"_len.txt\", \"\")\n"
      ]
     }
@@ -1065,12 +1065,12 @@
     "df_len_seq[\"sample\"] = df_len_seq[\"sample\"].str.replace(\"../../results/annotations/\", \"\")\n",
     "df_len_seq[\"sample\"] = df_len_seq[\"sample\"].str.replace(\"_len.txt\", \"\")\n",
     "\n",
-    "df_len_seq.to_csv(\"len_mean.csv\", index=None)"
+    "df_len_seq.to_csv(\"../results_analysis/tables/len_mean.csv\", index=None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1090,16 +1090,16 @@
     {
      "data": {
       "text/plain": [
-       "CompletedProcess(args=['Rscript', 'plot_mean_len.R'], returncode=0)"
+       "CompletedProcess(args=['Rscript', '../scripts_analysis/03plot_mean_len.R'], returncode=0)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "subprocess.run([\"Rscript\", \"plot_mean_len.R\"])"
+    "subprocess.run([\"Rscript\", \"../scripts_analysis/03plot_mean_len.R\"])"
    ]
   },
   {
@@ -1108,7 +1108,7 @@
    "source": [
     "<p align=\"center\">\n",
     " \n",
-    "  <img src=\"../../results/objective/mean_len.png\" alt=\"800\" width=\"900\" />\n",
+    "  <img src=\"../results_analysis/plots/mean_len.png\" alt=\"800\" width=\"900\" />\n",
     "\n",
     "</p>"
    ]
@@ -1124,27 +1124,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "CompletedProcess(args=['bash', 'fastp_analysis.sh'], returncode=0)"
+       "CompletedProcess(args=['bash', '../scripts_analysis/04fastp_analysis.sh'], returncode=0)"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "subprocess.run([\"bash\", \"fastp_analysis.sh\"])"
+    "subprocess.run([\"bash\", \"../scripts_analysis/04fastp_analysis.sh\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1306,13 +1306,13 @@
        "11             11073258  ERR753378  "
       ]
      },
-     "execution_count": 99,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_fastp = pd.read_csv(\"fastp_analysis.tsv\", sep=\"\\t\")\n",
+    "df_fastp = pd.read_csv(\"../results_analysis/tables/fastp_analysis.tsv\", sep=\"\\t\")\n",
     "df_fastp"
    ]
   },
@@ -1322,53 +1322,53 @@
    "source": [
     "## Mapped reads, with the reference Genome\n",
     "\n",
-    "* ### flagstats"
+    "* ### flagstats: in order to do this analysis, you need all the flagstats information in metadata/logs/flagstats."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "CompletedProcess(args=['bash', 'flagstats.sh'], returncode=0)"
+       "CompletedProcess(args=['bash', '../scripts_analysis/05flagstats.sh'], returncode=0)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "subprocess.run([\"bash\", \"flagstats.sh\"])"
+    "subprocess.run([\"bash\", \"../scripts_analysis/05flagstats.sh\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "flastats = pd.read_csv(\"flastats.tsv\", sep=\"\\t\")\n",
-    "flastats[\"mapped_reads_per\"] = np.array(flastats.mapped_reads/flastats.num_seqs_afterQC*100).round(2)\n",
-    "flastats[\"properly_paired_per\"] = np.array(flastats.properly_mapped/flastats.num_seqs_afterQC*100).round(2) \n",
-    "flastats[\"singletons_per\"] = np.array(flastats.singletons/flastats.num_seqs_afterQC*100).round(2)  "
+    "flagstats = pd.read_csv(\"../results_analysis/tables/flagstats.tsv\", sep=\"\\t\")\n",
+    "flagstats[\"mapped_reads_per\"] = np.array(flagstats.mapped_reads/flagstats.num_seqs_afterQC*100).round(2)\n",
+    "flagstats[\"properly_paired_per\"] = np.array(flagstats.properly_mapped/flagstats.num_seqs_afterQC*100).round(2) \n",
+    "flagstats[\"singletons_per\"] = np.array(flagstats.singletons/flagstats.num_seqs_afterQC*100).round(2)  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "flastats.to_csv(\"flastats.tsv\", sep=\"\\t\")"
+    "flagstats.to_csv(\"../results_analysis/tables/flagstats.tsv\", sep=\"\\t\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1569,14 +1569,21 @@
        "11             99.99                99.02            0.01  "
       ]
      },
-     "execution_count": 52,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "flastats"
+    "flagstats"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
