--- a/code/analysis/notebooks/annotations.ipynb
+++ b/code/analysis/notebooks/annotations.ipynb
@@ -1144,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1306,7 +1306,7 @@
        "11             11073258  ERR753378  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1579,11 +1579,64 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Plotting the previous table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "── Attaching packages ─────────────────────────────────────── tidyverse 1.3.2 ──\n",
+      "✔ ggplot2 3.4.2     ✔ purrr   1.0.1\n",
+      "✔ tibble  3.2.1     ✔ dplyr   1.1.2\n",
+      "✔ tidyr   1.3.0     ✔ stringr 1.5.0\n",
+      "✔ readr   2.1.4     ✔ forcats 1.0.0\n",
+      "── Conflicts ────────────────────────────────────────── tidyverse_conflicts() ──\n",
+      "✖ dplyr::filter() masks stats::filter()\n",
+      "✖ dplyr::lag()    masks stats::lag()\n",
+      "Warning messages:\n",
+      "1: package ‘ggplot2’ was built under R version 4.2.3 \n",
+      "2: package ‘tibble’ was built under R version 4.2.3 \n",
+      "3: package ‘tidyr’ was built under R version 4.2.3 \n",
+      "4: package ‘readr’ was built under R version 4.2.3 \n",
+      "5: package ‘purrr’ was built under R version 4.2.3 \n",
+      "6: package ‘dplyr’ was built under R version 4.2.3 \n",
+      "7: package ‘stringr’ was built under R version 4.2.3 \n",
+      "8: package ‘forcats’ was built under R version 4.2.3 \n",
+      "New names:\n",
+      "• `` -> `...1`\n",
+      "Rows: 12 Columns: 9\n",
+      "── Column specification ────────────────────────────────────────────────────────\n",
+      "Delimiter: \"\\t\"\n",
+      "chr (1): sample\n",
+      "dbl (8): ...1, num_seqs_afterQC, mapped_reads, properly_mapped, singletons, ...\n",
+      "\n",
+      "ℹ Use `spec()` to retrieve the full column specification for this data.\n",
+      "ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "CompletedProcess(args=['Rscript', '../scripts_analysis/06plot_flagstats.R'], returncode=0)"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "subprocess.run([\"Rscript\", \"../scripts_analysis/06plot_flagstats.R\"])"
+   ]
   }
  ],
  "metadata": {
