flgastats corregir y axis

--- a/code/analysis/notebooks/annotations.ipynb
+++ b/code/analysis/notebooks/annotations.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "The idea is to get more content about the project/workflow.\n",
     "\n",
-    "* Conda environment for this Notebook: [Greference_tools](../environments/Greference_tools.yml)"
+    "* Conda environment for this Notebook: [Greference_tools](../../environments/Greference_tools.yml)"
    ]
   },
   {
@@ -1587,7 +1587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -1629,13 +1629,24 @@
        "CompletedProcess(args=['Rscript', '../scripts_analysis/06plot_flagstats.R'], returncode=0)"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "subprocess.run([\"Rscript\", \"../scripts_analysis/06plot_flagstats.R\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p align=\"center\">\n",
+    " \n",
+    "  <img src=\"../results_analysis/plots/flagstats.png\" alt=\"800\" width=\"900\" />\n",
+    "\n",
+    "</p>"
    ]
   }
  ],
