--- a/code/analysis/notebooks/annotations.ipynb
+++ b/code/analysis/notebooks/annotations.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1680,7 +1680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -1921,7 +1921,7 @@
        "11  ERR753378  "
       ]
      },
-     "execution_count": 80,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1934,22 +1934,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "new_cols = [\"r_trans\", \"r_tot_het_hom\", \"r_snp_het_hom\", \"r_mnp_het_hom\", \"r_ins_het_hom\", \n",
-    "            \"r_del_het_hom\", \"r_indel_het_hom\", \"r_insert_del\", \"r_indel_snp_plus_mnp\"]\n",
-    "\n",
-    "for name,ncol in zip(new_cols, range(len(vcf_stats.columns) -1)):\n",
-    "    vcf_stats[name] = vcf_stats.iloc[:,ncol].str.split(\"|\").apply(lambda x: float(x[0]) / float(x[1])).round(2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['r_snp_transition_transversion', 'r_total_het_hom', 'r_snp_het_hom', 'r_mnp_het_hom', 'r_Insert_het_hom', 'r_del_het_hom', 'r_Indel_het_hom', 'r_insert_del', 'r_indel_snp_plus_mnp']\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -1981,14 +1975,13 @@
        "      <th>insert_del</th>\n",
        "      <th>indel_snp_plus_mnp</th>\n",
        "      <th>sample</th>\n",
-       "      <th>ratio_snp_tran</th>\n",
-       "      <th>r_trans</th>\n",
-       "      <th>r_tot_het_hom</th>\n",
+       "      <th>r_snp_transition_transversion</th>\n",
+       "      <th>r_total_het_hom</th>\n",
        "      <th>r_snp_het_hom</th>\n",
        "      <th>r_mnp_het_hom</th>\n",
-       "      <th>r_ins_het_hom</th>\n",
+       "      <th>r_Insert_het_hom</th>\n",
        "      <th>r_del_het_hom</th>\n",
-       "      <th>r_indel_het_hom</th>\n",
+       "      <th>r_Indel_het_hom</th>\n",
        "      <th>r_insert_del</th>\n",
        "      <th>r_indel_snp_plus_mnp</th>\n",
        "    </tr>\n",
@@ -2006,7 +1999,6 @@
        "      <td>645|691</td>\n",
        "      <td>1385|17231</td>\n",
        "      <td>ERR696683</td>\n",
-       "      <td>2.41</td>\n",
        "      <td>2.41</td>\n",
        "      <td>1.36</td>\n",
        "      <td>1.36</td>\n",
@@ -2030,7 +2022,6 @@
        "      <td>1974|23149</td>\n",
        "      <td>ERR753368</td>\n",
        "      <td>2.38</td>\n",
-       "      <td>2.38</td>\n",
        "      <td>1.32</td>\n",
        "      <td>1.32</td>\n",
        "      <td>2.51</td>\n",
@@ -2052,7 +2043,6 @@
        "      <td>934|982</td>\n",
        "      <td>1995|22719</td>\n",
        "      <td>ERR753369</td>\n",
-       "      <td>2.39</td>\n",
        "      <td>2.39</td>\n",
        "      <td>1.34</td>\n",
        "      <td>1.35</td>\n",
@@ -2076,7 +2066,6 @@
        "      <td>2790|28179</td>\n",
        "      <td>ERR753370</td>\n",
        "      <td>2.35</td>\n",
-       "      <td>2.35</td>\n",
        "      <td>1.39</td>\n",
        "      <td>1.39</td>\n",
        "      <td>2.75</td>\n",
@@ -2098,7 +2087,6 @@
        "      <td>403|462</td>\n",
        "      <td>896|12179</td>\n",
        "      <td>ERR753371</td>\n",
-       "      <td>2.48</td>\n",
        "      <td>2.48</td>\n",
        "      <td>1.27</td>\n",
        "      <td>1.26</td>\n",
@@ -2122,7 +2110,6 @@
        "      <td>1988|23399</td>\n",
        "      <td>ERR753372</td>\n",
        "      <td>2.36</td>\n",
-       "      <td>2.36</td>\n",
        "      <td>1.40</td>\n",
        "      <td>1.40</td>\n",
        "      <td>2.77</td>\n",
@@ -2144,7 +2131,6 @@
        "      <td>1036|1125</td>\n",
        "      <td>2250|24998</td>\n",
        "      <td>ERR753373</td>\n",
-       "      <td>2.10</td>\n",
        "      <td>2.10</td>\n",
        "      <td>0.82</td>\n",
        "      <td>0.80</td>\n",
@@ -2168,7 +2154,6 @@
        "      <td>1305|13687</td>\n",
        "      <td>ERR753374</td>\n",
        "      <td>2.22</td>\n",
-       "      <td>2.22</td>\n",
        "      <td>0.89</td>\n",
        "      <td>0.89</td>\n",
        "      <td>1.71</td>\n",
@@ -2190,7 +2175,6 @@
        "      <td>494|549</td>\n",
        "      <td>1089|14535</td>\n",
        "      <td>ERR753375</td>\n",
-       "      <td>2.49</td>\n",
        "      <td>2.49</td>\n",
        "      <td>1.37</td>\n",
        "      <td>1.36</td>\n",
@@ -2214,7 +2198,6 @@
        "      <td>1209|15279</td>\n",
        "      <td>ERR753376</td>\n",
        "      <td>2.47</td>\n",
-       "      <td>2.47</td>\n",
        "      <td>1.24</td>\n",
        "      <td>1.23</td>\n",
        "      <td>2.38</td>\n",
@@ -2237,7 +2220,6 @@
        "      <td>1230|15554</td>\n",
        "      <td>ERR753377</td>\n",
        "      <td>2.45</td>\n",
-       "      <td>2.45</td>\n",
        "      <td>1.36</td>\n",
        "      <td>1.35</td>\n",
        "      <td>2.54</td>\n",
@@ -2259,7 +2241,6 @@
        "      <td>873|900</td>\n",
        "      <td>1843|22028</td>\n",
        "      <td>ERR753378</td>\n",
-       "      <td>2.40</td>\n",
        "      <td>2.40</td>\n",
        "      <td>1.32</td>\n",
        "      <td>1.33</td>\n",
@@ -2303,33 +2284,33 @@
        "10        286|259     369|266         22|28    545|635         1230|15554   \n",
        "11        414|459     503|397         36|34    873|900         1843|22028   \n",
        "\n",
-       "       sample  ratio_snp_tran  r_trans  r_tot_het_hom  r_snp_het_hom  \\\n",
-       "0   ERR696683            2.41     2.41           1.36           1.36   \n",
-       "1   ERR753368            2.38     2.38           1.32           1.32   \n",
-       "2   ERR753369            2.39     2.39           1.34           1.35   \n",
-       "3   ERR753370            2.35     2.35           1.39           1.39   \n",
-       "4   ERR753371            2.48     2.48           1.27           1.26   \n",
-       "5   ERR753372            2.36     2.36           1.40           1.40   \n",
-       "6   ERR753373            2.10     2.10           0.82           0.80   \n",
-       "7   ERR753374            2.22     2.22           0.89           0.89   \n",
-       "8   ERR753375            2.49     2.49           1.37           1.36   \n",
-       "9   ERR753376            2.47     2.47           1.24           1.23   \n",
-       "10  ERR753377            2.45     2.45           1.36           1.35   \n",
-       "11  ERR753378            2.40     2.40           1.32           1.33   \n",
+       "       sample  r_snp_transition_transversion  r_total_het_hom  r_snp_het_hom  \\\n",
+       "0   ERR696683                           2.41             1.36           1.36   \n",
+       "1   ERR753368                           2.38             1.32           1.32   \n",
+       "2   ERR753369                           2.39             1.34           1.35   \n",
+       "3   ERR753370                           2.35             1.39           1.39   \n",
+       "4   ERR753371                           2.48             1.27           1.26   \n",
+       "5   ERR753372                           2.36             1.40           1.40   \n",
+       "6   ERR753373                           2.10             0.82           0.80   \n",
+       "7   ERR753374                           2.22             0.89           0.89   \n",
+       "8   ERR753375                           2.49             1.37           1.36   \n",
+       "9   ERR753376                           2.47             1.24           1.23   \n",
+       "10  ERR753377                           2.45             1.36           1.35   \n",
+       "11  ERR753378                           2.40             1.32           1.33   \n",
        "\n",
-       "    r_mnp_het_hom  r_ins_het_hom  r_del_het_hom  r_indel_het_hom  \\\n",
-       "0            2.44           1.00           1.29             0.88   \n",
-       "1            2.51           1.02           1.11             1.53   \n",
-       "2            2.20           1.02           1.33             1.39   \n",
-       "3            2.75           1.00           1.29             1.56   \n",
-       "4            2.63           0.97           1.36             1.07   \n",
-       "5            2.77           1.08           1.31             1.44   \n",
-       "6            1.76           0.73           0.87             0.85   \n",
-       "7            1.71           0.77           0.79             0.57   \n",
-       "8            3.50           1.18           1.29             1.09   \n",
-       "9            2.38           1.02           1.19             0.86   \n",
-       "10           2.54           1.10           1.39             0.79   \n",
-       "11           2.08           0.90           1.27             1.06   \n",
+       "    r_mnp_het_hom  r_Insert_het_hom  r_del_het_hom  r_Indel_het_hom  \\\n",
+       "0            2.44              1.00           1.29             0.88   \n",
+       "1            2.51              1.02           1.11             1.53   \n",
+       "2            2.20              1.02           1.33             1.39   \n",
+       "3            2.75              1.00           1.29             1.56   \n",
+       "4            2.63              0.97           1.36             1.07   \n",
+       "5            2.77              1.08           1.31             1.44   \n",
+       "6            1.76              0.73           0.87             0.85   \n",
+       "7            1.71              0.77           0.79             0.57   \n",
+       "8            3.50              1.18           1.29             1.09   \n",
+       "9            2.38              1.02           1.19             0.86   \n",
+       "10           2.54              1.10           1.39             0.79   \n",
+       "11           2.08              0.90           1.27             1.06   \n",
        "\n",
        "    r_insert_del  r_indel_snp_plus_mnp  \n",
        "0           0.93                  0.08  \n",
@@ -2346,13 +2327,48 @@
        "11          0.97                  0.08  "
       ]
      },
-     "execution_count": 113,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "new_cols = []\n",
+    "for col in vcf_stats.iloc[:,:9].columns:\n",
+    "    new_cols.append(\"r_\" + col)\n",
+    "\n",
+    "print(new_cols)\n",
+    "\n",
+    "for name,ncol in zip(new_cols, range(len(vcf_stats.columns) -1)):\n",
+    "    vcf_stats[name] = vcf_stats.iloc[:,ncol].str.split(\"|\").apply(lambda x: float(x[0]) / float(x[1])).round(2)\n",
+    "\n",
     "vcf_stats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "r_trans 0\n",
+      "r_tot_het_hom 1\n",
+      "r_snp_het_hom 2\n",
+      "r_mnp_het_hom 3\n",
+      "r_ins_het_hom 4\n",
+      "r_del_het_hom 5\n",
+      "r_indel_het_hom 6\n",
+      "r_insert_del 7\n",
+      "r_indel_snp_plus_mnp 8\n"
+     ]
+    }
+   ],
+   "source": [
+    "for name,ncol in zip(new_cols, range(len(vcf_stats.columns) -1)):\n",
+    "    print(name, ncol)"
    ]
   }
  ],
