--- a/code/analysis/notebooks/annotations.ipynb
+++ b/code/analysis/notebooks/annotations.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1680,7 +1680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1921,7 +1921,7 @@
        "11  ERR753378  "
       ]
      },
-     "execution_count": 115,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1934,7 +1934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -2327,7 +2327,7 @@
        "11          0.97                  0.08  "
       ]
      },
-     "execution_count": 121,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2347,28 +2347,265 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "r_trans 0\n",
-      "r_tot_het_hom 1\n",
-      "r_snp_het_hom 2\n",
-      "r_mnp_het_hom 3\n",
-      "r_ins_het_hom 4\n",
-      "r_del_het_hom 5\n",
-      "r_indel_het_hom 6\n",
-      "r_insert_del 7\n",
-      "r_indel_snp_plus_mnp 8\n"
+      "r_snp_transition_transversion\n",
+      "r_total_het_hom\n",
+      "r_snp_het_hom\n",
+      "r_mnp_het_hom\n",
+      "r_Insert_het_hom\n",
+      "r_del_het_hom\n",
+      "r_Indel_het_hom\n",
+      "r_insert_del\n",
+      "r_indel_snp_plus_mnp\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_69972/883756158.py:2: FutureWarning: The default value of regex will change from True to False in a future version. In addition, single character regular expressions will *not* be treated as literal strings when regex=True.\n",
+      "  vcf_stats[name] = \"(\" + vcf_stats[name].str.replace(\"|\", \"/\") + \")\"\n"
      ]
     }
    ],
    "source": [
-    "for name,ncol in zip(new_cols, range(len(vcf_stats.columns) -1)):\n",
-    "    print(name, ncol)"
+    "for name in vcf_stats.iloc[:,:9]:\n",
+    "    vcf_stats[name] = \"(\" + vcf_stats[name].str.replace(\"|\", \"/\") + \")\"\n",
+    "    \n",
+    "for name,r_name in zip(vcf_stats.iloc[:,:9].columns, vcf_stats.iloc[:,10:].columns):\n",
+    "    vcf_stats[name] = vcf_stats[r_name] + \" \" + vcf_stats[name]\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>snp_transition_transversion</th>\n",
+       "      <th>total_het_hom</th>\n",
+       "      <th>snp_het_hom</th>\n",
+       "      <th>mnp_het_hom</th>\n",
+       "      <th>Insert_het_hom</th>\n",
+       "      <th>del_het_hom</th>\n",
+       "      <th>Indel_het_hom</th>\n",
+       "      <th>insert_del</th>\n",
+       "      <th>indel_snp_plus_mnp</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>16969|7054</td>\n",
+       "      <td>10718|7898</td>\n",
+       "      <td>9729|7144</td>\n",
+       "      <td>254|104</td>\n",
+       "      <td>323|322</td>\n",
+       "      <td>389|302</td>\n",
+       "      <td>23|26</td>\n",
+       "      <td>645|691</td>\n",
+       "      <td>1385|17231</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>22790|9589</td>\n",
+       "      <td>14288|10835</td>\n",
+       "      <td>12891|9739</td>\n",
+       "      <td>371|148</td>\n",
+       "      <td>480|469</td>\n",
+       "      <td>497|447</td>\n",
+       "      <td>49|32</td>\n",
+       "      <td>949|944</td>\n",
+       "      <td>1974|23149</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>22316|9338</td>\n",
+       "      <td>14172|10542</td>\n",
+       "      <td>12726|9458</td>\n",
+       "      <td>368|167</td>\n",
+       "      <td>472|462</td>\n",
+       "      <td>560|422</td>\n",
+       "      <td>46|33</td>\n",
+       "      <td>934|982</td>\n",
+       "      <td>1995|22719</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>27387|11651</td>\n",
+       "      <td>17992|12977</td>\n",
+       "      <td>16009|11510</td>\n",
+       "      <td>484|176</td>\n",
+       "      <td>614|615</td>\n",
+       "      <td>807|626</td>\n",
+       "      <td>78|50</td>\n",
+       "      <td>1229|1433</td>\n",
+       "      <td>2790|28179</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>12222|4926</td>\n",
+       "      <td>7327|5748</td>\n",
+       "      <td>6639|5253</td>\n",
+       "      <td>208|79</td>\n",
+       "      <td>198|205</td>\n",
+       "      <td>266|196</td>\n",
+       "      <td>16|15</td>\n",
+       "      <td>403|462</td>\n",
+       "      <td>896|12179</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>22773|9639</td>\n",
+       "      <td>14808|10579</td>\n",
+       "      <td>13331|9536</td>\n",
+       "      <td>391|141</td>\n",
+       "      <td>475|439</td>\n",
+       "      <td>559|427</td>\n",
+       "      <td>52|36</td>\n",
+       "      <td>914|986</td>\n",
+       "      <td>1988|23399</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>25705|12262</td>\n",
+       "      <td>12251|14997</td>\n",
+       "      <td>10881|13538</td>\n",
+       "      <td>369|210</td>\n",
+       "      <td>438|598</td>\n",
+       "      <td>522|603</td>\n",
+       "      <td>41|48</td>\n",
+       "      <td>1036|1125</td>\n",
+       "      <td>2250|24998</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>14105|6359</td>\n",
+       "      <td>7057|7935</td>\n",
+       "      <td>6290|7083</td>\n",
+       "      <td>198|116</td>\n",
+       "      <td>260|338</td>\n",
+       "      <td>292|368</td>\n",
+       "      <td>17|30</td>\n",
+       "      <td>598|660</td>\n",
+       "      <td>1305|13687</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>14455|5814</td>\n",
+       "      <td>9045|6579</td>\n",
+       "      <td>8214|6024</td>\n",
+       "      <td>231|66</td>\n",
+       "      <td>267|227</td>\n",
+       "      <td>309|240</td>\n",
+       "      <td>24|22</td>\n",
+       "      <td>494|549</td>\n",
+       "      <td>1089|14535</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>15428|6239</td>\n",
+       "      <td>9112|7376</td>\n",
+       "      <td>8256|6705</td>\n",
+       "      <td>224|94</td>\n",
+       "      <td>265|261</td>\n",
+       "      <td>342|287</td>\n",
+       "      <td>25|29</td>\n",
+       "      <td>526|629</td>\n",
+       "      <td>1209|15279</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>15435|6302</td>\n",
+       "      <td>9659|7125</td>\n",
+       "      <td>8761|6485</td>\n",
+       "      <td>221|87</td>\n",
+       "      <td>286|259</td>\n",
+       "      <td>369|266</td>\n",
+       "      <td>22|28</td>\n",
+       "      <td>545|635</td>\n",
+       "      <td>1230|15554</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>21762|9081</td>\n",
+       "      <td>13585|10286</td>\n",
+       "      <td>12330|9251</td>\n",
+       "      <td>302|145</td>\n",
+       "      <td>414|459</td>\n",
+       "      <td>503|397</td>\n",
+       "      <td>36|34</td>\n",
+       "      <td>873|900</td>\n",
+       "      <td>1843|22028</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   snp_transition_transversion total_het_hom  snp_het_hom mnp_het_hom  \\\n",
+       "0                   16969|7054    10718|7898    9729|7144     254|104   \n",
+       "1                   22790|9589   14288|10835   12891|9739     371|148   \n",
+       "2                   22316|9338   14172|10542   12726|9458     368|167   \n",
+       "3                  27387|11651   17992|12977  16009|11510     484|176   \n",
+       "4                   12222|4926     7327|5748    6639|5253      208|79   \n",
+       "5                   22773|9639   14808|10579   13331|9536     391|141   \n",
+       "6                  25705|12262   12251|14997  10881|13538     369|210   \n",
+       "7                   14105|6359     7057|7935    6290|7083     198|116   \n",
+       "8                   14455|5814     9045|6579    8214|6024      231|66   \n",
+       "9                   15428|6239     9112|7376    8256|6705      224|94   \n",
+       "10                  15435|6302     9659|7125    8761|6485      221|87   \n",
+       "11                  21762|9081   13585|10286   12330|9251     302|145   \n",
+       "\n",
+       "   Insert_het_hom del_het_hom Indel_het_hom insert_del indel_snp_plus_mnp  \n",
+       "0         323|322     389|302         23|26    645|691         1385|17231  \n",
+       "1         480|469     497|447         49|32    949|944         1974|23149  \n",
+       "2         472|462     560|422         46|33    934|982         1995|22719  \n",
+       "3         614|615     807|626         78|50  1229|1433         2790|28179  \n",
+       "4         198|205     266|196         16|15    403|462          896|12179  \n",
+       "5         475|439     559|427         52|36    914|986         1988|23399  \n",
+       "6         438|598     522|603         41|48  1036|1125         2250|24998  \n",
+       "7         260|338     292|368         17|30    598|660         1305|13687  \n",
+       "8         267|227     309|240         24|22    494|549         1089|14535  \n",
+       "9         265|261     342|287         25|29    526|629         1209|15279  \n",
+       "10        286|259     369|266         22|28    545|635         1230|15554  \n",
+       "11        414|459     503|397         36|34    873|900         1843|22028  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vcf_stats.r_snp_transition_transversion.astype('string')vcf_stats.snp_transition_transversion  "
    ]
   }
  ],
